--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>A D A M A</title>
-		<link rel="icon" type="image/ico" href="images/logos.jpg" />
+		<link rel="icon" type="image/ico" href="images/logo.png" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,16 +24,18 @@
 						<!-- Items -->
 							<div class="items">
 
+								<article class="item thumb span-1">
+									<a href=""><img src="images/logos.jpg" alt=""></a>
+								</article>
+								
 								<div class="item intro span-2">
 									<h1>A D A M A</h1>
 									<p>Asociación de Artistas<br />
 										Marina Alta</p>
+										<p><a href="info/index.html">Más información</a></p>
 								</div>
 
-								<article class="item thumb span-1">
-									<h2>Más información</h2>
-									<a href="info/index.html"><img src="images/thumbs/info.jpg" alt=""></a>
-								</article>
+								
 
 								<article class="item thumb span-2">
 									<h2>Cristina Minguillón</h2>
@@ -92,7 +94,7 @@
 				<!-- Footer -->
 					<section id="footer">
 						<section>
-							<p><strong>Para más información </strong> <a href="info/index.html">VER AQUÍ</a>.</p> 
+							<p><strong></strong> <a href="info/index.html"></a></p> 
 						</section>
 						<section>
 							<ul class="icons">
