--- a/info/index.html
+++ b/info/index.html
@@ -6,8 +6,8 @@
 -->
 <html>
 	<head>
-		<title>INFO · A D A M A</title>
-		<link rel="icon" type="image/ico" href="images/logos.jpg" />
+		<title>I N F O · A D A M A</title>
+		<link rel="icon" type="image/ico" href="images/logo.png" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,6 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
+							<a href="" class="image"><img src="images/logo.png" alt=""></a>
 							<h1><a href="index.html"></a>A D A M A</h1>
 							<p>Asociación de Artistas Marina Alta</p>
 						</div>
