--- a/info/index.html
+++ b/info/index.html
@@ -227,7 +227,7 @@
 						</div>
 						<div id="copyright">
 							<ul>
-								<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; artistasmarinaalta.com</li><li>diseño: <a href="https://linktr.ee/noelwebs">=) @noelcresencio</a> con <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</div>
