--- a/index.html
+++ b/index.html
@@ -38,37 +38,37 @@
 								
 
 								<article class="item thumb span-2">
-									<h2>Cristina Minguillón</h2>
+									<h2>Cristina Minguillón · <a href="https://rcrear.github.io/CristinaMing/">WEB</a></h2>
 									<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
-									<h2>Artista 3</h2>
+									<h2>Artista 3 · <a href="https://rcrear.github.io/CristinaMing/">WEB</a></h2>
 									<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
-									<h2>Artista 4</h2>
+									<h2>Artista 4 · <a href="https://rcrear.github.io/CristinaMing/">WEB</a></h2>
 									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
-									<h2>Artista 5</h2>
+									<h2>Artista 5 · <a href="https://rcrear.github.io/CristinaMing/">WEB</a></h2>
 									<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
-									<h2>Artista 6</h2>
+									<h2>Artista 6 · <a href="https://rcrear.github.io/CristinaMing/">WEB</a></h2>
 									<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
-									<h2>Artista 7</h2>
+									<h2>Artista 7 · <a href="https://rcrear.github.io/CristinaMing/">WEB</a></h2>
 									<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
-									<h2>Artista 8</h2>
+									<h2>Artista 8 · <a href="https://rcrear.github.io/CristinaMing/">WEB</a></h2>
 									<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt=""></a>
 								</article>
 
@@ -77,15 +77,15 @@
 						<!-- Items -->
 							<div class="items">
 
-								<article class="item thumb span-2"><h2>Artista 9</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>Artista 10</h2><a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>Artista 11</h2><a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>Artista 12</h2><a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>Artista 13</h2><a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>Artista 14</h2><a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>Artista 15</h2><a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>Artista 16</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>Artista 17</h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>Artista 9 · <a href="https://rcrear.github.io/CristinaMing/">WEB</a></h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>Artista 10 · <a href="https://rcrear.github.io/CristinaMing/">WEB</a></h2><a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>Artista 11 · <a href="https://rcrear.github.io/CristinaMing/">WEB</a></h2><a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>Artista 12 · <a href="https://rcrear.github.io/CristinaMing/">WEB</a></h2><a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>Artista 13 · <a href="https://rcrear.github.io/CristinaMing/">WEB</a></h2><a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>Artista 14 · <a href="https://rcrear.github.io/CristinaMing/">WEB</a></h2><a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>Artista 15 · <a href="https://rcrear.github.io/CristinaMing/">WEB</a></h2><a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>Artista 16 · <a href="https://rcrear.github.io/CristinaMing/">WEB</a></h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>Artista 17 · <a href="https://rcrear.github.io/CristinaMing/">WEB</a></h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a></article>
 
 							</div>
 
