--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								</article>
 
 								<article class="item thumb span-2">
-									<h2>Artista 3 · <a href="https://rcrear.github.io/CristinaMing/">WEB</a></h2>
+									<h2>Artista 3 · <a href="mailto:cminguillon1@gmail.com">Email</a></h2>
 									<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a>
 								</article>
 
