--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 									<h1>A D A M A</h1>
 									<p>Asociación de Artistas<br />
 										Marina Alta</p>
-										<p><a href="info/index.html">Más información</a></p>
+										<p><a href="info/index.html">+ Más información</a></p>
 								</div>
 
 								
